<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_20"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/add_new_folder"
        android:textAlignment="center"
        style="@style/text_paper_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_folder_name"
        android:layout_marginTop="@dimen/dp_10"
        style="@style/text_paper_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/folder_name"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_folder"
        style="@style/PrimaryButtonTheme"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/add"/>

</LinearLayout>